unpackaged/main/default/objects/Co_Acreditado__c/Co_Acreditado__c.object-meta.xml
<CustomObject>
    <label>Co Acreditado</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Folio Co Acreditado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co Acreditados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>