unpackaged/main/default/objects/Co_Acreditado__c/fields/Apellido_Materno_CO_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Materno_CO_Acreditado__c</fullName>
    <label>Apellido Materno CO Acreditado</label>
    <length>30</length>
    <type>Text</type>
</CustomField>