unpackaged/main/default/objects/Co_Acreditado__c/fields/Apellido_Paterno_CO_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Paterno_CO_Acreditado__c</fullName>
    <label>Apellido Paterno CO Acreditado</label>
    <length>30</length>
    <type>Text</type>
</CustomField>