unpackaged/main/default/objects/Co_Acreditado__c/fields/Co_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Co_Acreditado__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/co_acreditado__c/&quot; &amp; Id &amp; &quot;/view&quot;,Name &amp; &quot; - &quot; &amp; Nombre__c &amp; &quot; &quot; &amp; Apellido_Paterno_CO_Acreditado__c  &amp; &quot; &quot; &amp; Apellido_Paterno_CO_Acreditado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co Acreditado</label>
    <type>Text</type>
</CustomField>