unpackaged/main/default/objects/Co_Acreditado__c/fields/Correo_Electronico_CO_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_CO_Acreditado__c</fullName>
    <label>Correo Electrónico CO Acreditado</label>
    <type>Email</type>
</CustomField>