unpackaged/main/default/objects/Co_Acreditado__c/fields/CURP__c.field-meta.xml
<CustomField>
    <fullName>CURP__c</fullName>
    <label>CURP Co Acreditado</label>
    <length>18</length>
    <type>Text</type>
</CustomField>