unpackaged/main/default/objects/Co_Acreditado__c/fields/Dictaminacion__c.field-meta.xml
<CustomField>
    <fullName>Dictaminacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dictaminación</label>
    <referenceTo>Dictaminacion__c</referenceTo>
    <relationshipLabel>Co Acreditados</relationshipLabel>
    <relationshipName>Co_Acreditados</relationshipName>
    <type>Lookup</type>
</CustomField>