unpackaged/main/default/objects/Co_Acreditado__c/fields/Edad_CO_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Edad_CO_Acreditado__c</fullName>
    <formula>((TODAY()) - (Fecha_de_Nacimiento_CO_Acreditado__c))/365</formula>
    <label>Edad CO Acreditado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>