unpackaged/main/default/objects/Co_Acreditado__c/fields/Empresa_CO_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Empresa_CO_Acreditado__c</fullName>
    <label>Empresa CO Acreditado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>