unpackaged/main/default/objects/Co_Acreditado__c/fields/Evalua_Monitor_Co_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Evalua_Monitor_Co_Acreditado__c</fullName>
    <formula>IF(NOT(Check_Direccion_Personal__c) &amp;&amp; NOT(Check_Direccion_Laboral__c), &quot;1&quot;, 
			    IF(Check_Direccion_Personal__c &amp;&amp; NOT(Check_Direccion_Laboral__c), &quot;2&quot;,
									IF(NOT(Check_Direccion_Personal__c) &amp;&amp; Check_Direccion_Laboral__c, &quot;3&quot;,
												    IF(Check_Direccion_Personal__c &amp;&amp; Check_Direccion_Laboral__c, &quot;4&quot;, 
																	&quot;1&quot;)
											)
								)
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evalua Monitor Co Acreditado</label>
    <type>Text</type>
</CustomField>