unpackaged/main/default/objects/Co_Acreditado__c/fields/Fecha_de_Nacimiento_CO_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Nacimiento_CO_Acreditado__c</fullName>
    <label>Fecha de Nacimiento CO Acreditado</label>
    <type>Date</type>
</CustomField>