unpackaged/main/default/objects/Co_Acreditado__c/fields/Ingreso_Mensual_CO_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Ingreso_Mensual_CO_Acreditado__c</fullName>
    <label>Ingreso Mensual CO Acreditado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 3,999</fullName>
            </value>
            <value>
                <fullName>4,000 - 7,999</fullName>
            </value>
            <value>
                <fullName>8,000 - 12,999</fullName>
            </value>
            <value>
                <fullName>13,000 - 15,999</fullName>
            </value>
            <value>
                <fullName>16,000 - 19,999</fullName>
            </value>
            <value>
                <fullName>20,000 - 24,999</fullName>
            </value>
            <value>
                <fullName>25,000 - 34,999</fullName>
            </value>
            <value>
                <fullName>35,000 - 44,999</fullName>
            </value>
            <value>
                <fullName>45,000 - 54,999</fullName>
            </value>
            <value>
                <fullName>55,000 - 64,999</fullName>
            </value>
            <value>
                <fullName>65,000 - 74,999</fullName>
            </value>
            <value>
                <fullName>75,000 - Más</fullName>
            </value>
            <value>
                <fullName>Otro Ingreso Mensual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>