unpackaged/main/default/objects/Co_Acreditado__c/fields/Lugar_de_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Lugar_de_nacimiento__c</fullName>
    <label>Lugar de nacimiento Co Acreditado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lugar_Nacimiento</valueSetName>
    </valueSet>
</CustomField>