unpackaged/main/default/objects/Co_Acreditado__c/fields/Monitor_Co_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Co_Acreditado__c</fullName>
    <formula>CASE(Evalua_Monitor_Co_Acreditado__c,
  				&quot;1&quot;, IMAGE(&quot;/resource/1690319029000/Monitor_CoAcreditado_01?&quot;, &quot;Monitor&quot;, 130,350),
						&quot;2&quot;, IMAGE(&quot;/resource/1690319071000/Monitor_CoAcreditado_02?&quot;, &quot;Monitor&quot;, 130,350),
						&quot;3&quot;, IMAGE(&quot;/resource/1690319088000/Monitor_CoAcreditado_03?&quot;, &quot;Monitor&quot;, 130,350),
						&quot;4&quot;, IMAGE(&quot;/resource/1690319101000/Monitor_CoAcreditado_04?&quot;, &quot;Monitor&quot;, 130,350),
						IMAGE(&quot;/resource/1690319029000/Monitor_CoAcreditado_01?&quot;, &quot;Monitor&quot;, 130,350)
					)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monitor Co Acreditado</label>
    <type>Text</type>
</CustomField>