unpackaged/main/default/objects/Co_Acreditado__c/fields/Nacionalidad_CO_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad_CO_Acreditado__c</fullName>
    <label>Nacionalidad CO Acreditado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nacionalidad</valueSetName>
    </valueSet>
</CustomField>