unpackaged/main/default/objects/Co_Acreditado__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>Nombre Co Acreditado</label>
    <length>30</length>
    <type>Text</type>
</CustomField>