unpackaged/main/default/objects/Co_Acreditado__c/fields/Producto_Financiero__c.field-meta.xml
<CustomField>
    <fullName>Producto_Financiero__c</fullName>
    <formula>TEXT(Contrato__r.Oportunidad__r.Producto_financiero__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto Financiero</label>
    <type>Text</type>
</CustomField>