unpackaged/main/default/objects/Co_Acreditado__c/fields/Puesto_CO_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Puesto_CO_Acreditado__c</fullName>
    <label>Puesto CO Acreditado</label>
    <length>30</length>
    <type>Text</type>
</CustomField>