unpackaged/main/default/objects/Co_Acreditado__c/fields/Registro_completo__c.field-meta.xml
<CustomField>
    <fullName>Registro_completo__c</fullName>
    <formula>IF( Check_Direccion_Personal__c &amp;&amp;  Check_Direccion_Laboral__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registro completo</label>
    <type>Checkbox</type>
</CustomField>