unpackaged/main/default/objects/Co_Acreditado__c/fields/Registro_Patronal_CO_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Registro_Patronal_CO_Acreditado__c</fullName>
    <label>Registro Patronal CO Acreditado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>