unpackaged/main/default/objects/Co_Acreditado__c/fields/RFC_CO_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>RFC_CO_Acreditado__c</fullName>
    <label>RFC CO Acreditado</label>
    <length>13</length>
    <type>Text</type>
</CustomField>