unpackaged/main/default/objects/Co_Acreditado__c/fields/Sexo__c.field-meta.xml
<CustomField>
    <fullName>Sexo__c</fullName>
    <label>Sexo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MASCULINO</fullName>
            </value>
            <value>
                <fullName>FEMENINO</fullName>
            </value>
            <value>
                <fullName>INDISTINTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>