unpackaged/main/default/objects/Co_Acreditado__c/fields/Telefono_Trabajo_CO_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Trabajo_CO_Acreditado__c</fullName>
    <label>Teléfono Trabajo CO Acreditado</label>
    <type>Phone</type>
</CustomField>