unpackaged/main/default/objects/Co_Acreditado__c/fields/Tipo_de_tramite__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_tramite__c</fullName>
    <formula>Contrato__r.Tipo_de_Tramite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de trámite</label>
    <type>Text</type>
</CustomField>