unpackaged/main/default/objects/Co_Acreditado__c/validationRules/Cancelled_Status_Cannot_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Status_Cannot_Edit</fullName>
    <active>true</active>
    <description>Los siguientes campos no pueden ser editados si el estado es Cancelado en el Proceso de Venta (Opp)

Apellido Paterno CO Acreditado
Apellido Materno CO Acreditado
Sexo</description>
    <errorConditionFormula>ISPICKVAL(Contrato__r.Oportunidad__r.StageName, &#39;Cancelado&#39;) &amp;&amp; 

OR(ISCHANGED( Apellido_Materno_CO_Acreditado__c) ,

ISCHANGED( Apellido_Paterno_CO_Acreditado__c),

ISCHANGED( Sexo__c ))</errorConditionFormula>
    <errorMessage>El Proceso de Venta se encuentra Cancelado, No es posible cambiar los Datos de Nombre y Sexo.</errorMessage>
</ValidationRule>