unpackaged/main/default/objects/Co_Acreditado__c/validationRules/Nombre_Only_Accept_Letters.validationRule-meta.xml
<ValidationRule>
    <fullName>Nombre_Only_Accept_Letters</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Nombre__c  ,&quot;^[a-z  A-Z ñ Ñ]*$&quot;)) || 

NOT(REGEX( Apellido_Materno_CO_Acreditado__c  ,&quot;^[a-z  A-Z ñ Ñ]*$&quot;)) || 

NOT(REGEX( Apellido_Paterno_CO_Acreditado__c  ,&quot;^[a-z  A-Z ñ Ñ]*$&quot;))</errorConditionFormula>
    <errorMessage>Por favor ingresar unicamente letras para Nombres y Apellidos</errorMessage>
</ValidationRule>