unpackaged/main/default/objects/Co_Acreditado__c/validationRules/Valida_mayoria_de_edad.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_mayoria_de_edad</fullName>
    <active>true</active>
    <description>Valida que el co acreditado sea  mayor de edad</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &#39;Administrador del sistema&#39;,
Edad_CO_Acreditado__c &lt; 18
)</errorConditionFormula>
    <errorDisplayField>Fecha_de_Nacimiento_CO_Acreditado__c</errorDisplayField>
    <errorMessage>No se puede crear por ser menor de edad.</errorMessage>
</ValidationRule>