unpackaged/main/default/objects/Co_Acreditado__c/validationRules/Valida_modificacion_fecha_de_nacimiento.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_modificacion_fecha_de_nacimiento</fullName>
    <active>true</active>
    <description>No se puede modificar el campo nombre si el estatus del proceso de venta de la oportunidad es diferente a Validación, Reservado, Formalizado</description>
    <errorConditionFormula>AND(

ISCHANGED(Fecha_de_Nacimiento_CO_Acreditado__c),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Validación&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Reservado&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Formalizado&#39;)

)</errorConditionFormula>
    <errorMessage>No se puede modificar el campo fecha de nacimiento si el estatus del proceso de venta de la oportunidad es diferente a Validación, Reservado, Formalizado</errorMessage>
</ValidationRule>