unpackaged/main/default/objects/Co_Acreditado__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nombre__c</columns>
    <columns>Apellido_Materno_CO_Acreditado__c</columns>
    <columns>Apellido_Paterno_CO_Acreditado__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>